extras/alpha-cluster/kubernetes/ingress/staging-wdldt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: wdldt-staging-astro-ingress
  namespace: staging-astroshop
spec:
  rules:
  - host: staging.astroshop.whydevslovedynatrace.com
    http:
      paths:
      - backend:
          service:
            name: astroshop-frontendproxy
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - staging.astroshop.whydevslovedynatrace.com
    secretName: wdldt-staging-astro-tls
